<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".MainActivity">

        <Button
                android:id="@+id/btn_click_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/work_manager"/>

        <Button
                android:id="@+id/btn_motion_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motion_layout"
                android:layout_marginTop="20dp"/>


        <Button
                android:id="@+id/btn_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:layout_marginTop="20dp"
        />

        <Button
                android:id="@+id/btn_jetpack_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Jetpack\nNavigation"/>

        <Button
                android:id="@+id/btn_couroutines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coroutines"
                android:layout_marginTop="20dp"
        />

        <Button
                android:id="@+id/btn_instant_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/instant_apps"
        />

        <Button
                android:id="@+id/btn_auto_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_fill"
                android:layout_marginTop="20dp"
        />

        <Button
                android:id="@+id/btn_setting_panel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/setting_panel"/>

        <Button
                android:id="@+id/btn_dark_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:layout_marginTop="20dp"/>


        <Button
                android:id="@+id/btn_bio_metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/unified_biometrics"/>

        <Button
                android:id="@+id/btn_android_slices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_slices"
                android:layout_marginTop="20dp"/>

        <Button
                android:id="@+id/btn_download_manger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/download_manager"/>


        <Button
                android:id="@+id/btn_content_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_provider"
                android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>